# Homework_14

./: .flake8  .gitignore  README.md  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_classes_py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_reader_py.html  z_8022d958e71ca63d___init___py.html  z_8022d958e71ca63d_classes_py.html  z_8022d958e71ca63d_conftest_py.html  z_8022d958e71ca63d_main_py.html  z_8022d958e71ca63d_reader_py.html
src/: classes.py  main.py  reader.py
tests/: test_classes.py
